# hfractals

./: CHANGELOG.md  hfractals.cabal
app/: Fractals.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
